--- a/Documentation/4x04.md
+++ b/Documentation/4x04.md
@@ -1,9 +1,13 @@
-# 📘 4.4 — Поддержка WebSocket и подписок
+# 🧱 Блок 4.4 — Поддержка WebSocket и подписок
+
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 4 — Интерфейсы и Интеграции
-* Блок 4.4 — Поддержка WebSocket и подписок
+* **Пакет:** 4 — Интерфейсы и Интеграции
+* **Блок:** 4.4 — Поддержка WebSocket и подписок
+
+---
 
 ## 🎯 Назначение
 
