--- a/Documentation/8x01.md
+++ b/Documentation/8x01.md
@@ -1,9 +1,13 @@
-# 8.1 — Производительность и критические задержки (Latency Profiling & Low-Latency OLTP)
+# 🧱 Блок 8.1 — Производительность и критические задержки (Latency Profiling & Low-Latency OLTP)
 
-## 🏢 Идентификатор блока
+---
 
-**Пакет 8 — Производительность**
-**Блок 8.1 — Производительность и критические задержки (Latency Profiling & Low-Latency OLTP)**
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.1 — Производительность и критические задержки (Latency Profiling & Low-Latency OLTP)
+
+---
 
 ## 🌟 Назначение
 
