--- a/Documentation/8x02.md
+++ b/Documentation/8x02.md
@@ -1,9 +1,13 @@
-# 8.2 — Параллельное выполнение и конвейеры (Parallel Execution & Pipelines)
+# 🧱 Блок 8.2 — Параллельное выполнение и конвейеры (Parallel Execution & Pipelines)
 
-## 🏢 Идентификатор блока
+---
 
-**Пакет 8 — Производительность**
-**Блок 8.2 — Параллельное выполнение и конвейеры (Parallel Execution & Pipelines)**
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.2 — Параллельное выполнение и конвейеры (Parallel Execution & Pipelines)
+
+---
 
 ## 🌟 Назначение
 
