--- a/Documentation/8x03.md
+++ b/Documentation/8x03.md
@@ -1,9 +1,13 @@
-# 8.3 — Векторизированный движок выполнения (Vectorized Execution Engine)
+# 🧱 Блок 8.3 — Векторизированный движок выполнения (Vectorized Execution Engine)
 
-## 🏢 Идентификатор блока
+---
 
-**Пакет 8 — Производительность**
-**Блок 8.3 — Векторизированный движок выполнения (Vectorized Execution Engine)**
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.3 — Векторизированный движок выполнения (Vectorized Execution Engine)
+
+---
 
 ## 🌟 Назначение
 
