--- a/Documentation/8x04.md
+++ b/Documentation/8x04.md
@@ -1,9 +1,13 @@
-# 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
 
-## 🏢 Идентификатор блока
+---
 
-**Пакет 8 — Производительность**
-**Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)**
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
 
 ## 🌟 Назначение
 
