--- a/Documentation/8x05.md
+++ b/Documentation/8x05.md
@@ -5,6 +5,17 @@
 * Пакет 8 — Производительность
 * Блок 8.5 — Рерантайм-оптимизация и обратная связь
 
+# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
 ## 🎯 Назначение
 
 Данный блок реализует механизм повторной оптимизации планов выполнения SQL-запросов во время их выполнения (runtime re-optimization), используя данные о фактической селективности, размере промежуточных результатов, времени выполнения этапов и доступности ресурсов. Он позволяет адаптировать планы в реальном времени и улучшать производительность без повторной компиляции. Дополнительно реализован цикл обратной связи (feedback loop), который накапливает статистику выполнения и обновляет гистограммы и кардинальности для последующих запросов.
