--- a/Documentation/8x06.md
+++ b/Documentation/8x06.md
@@ -5,6 +5,17 @@
 * Пакет 8 — Производительность
 * Блок 8.6 — Кэширование планов и обратная связь по избирательности
 
+# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
 ## ✨ Назначение
 
 Данный блок отвечает за эффективное кэширование SQL-планов выполнения, а также за добавление обратной связи о фактических показателях избирательности (селективности) в систему оптимизации запросов.
