--- a/Documentation/8x07.md
+++ b/Documentation/8x07.md
@@ -5,6 +5,17 @@
 * Пакет 8 — Производительность
 * Блок 8.7 — Форматы хранения PAX / Apache Arrow (PAX / Arrow Layouts)
 
+# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
 ## 🎯 Назначение
 
 Данный блок отвечает за выбор и реализацию форматов хранения данных в оперативной памяти, ориентированных на высокую производительность при выполнении аналитических и OLTP-запросов. В частности, используется гибридный подход с поддержкой как PAX (Partition Attributes Across) для строчно-колоночного хранения, так и Apache Arrow для колоночного in-memory формата с нулевой сериализацией.
