--- a/Documentation/8x08.md
+++ b/Documentation/8x08.md
@@ -5,6 +5,17 @@
 * Пакет 8 — Производительность
 * Блок 8.8 — Снимки и восстановление
 
+# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 8 — Производительность
+* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+
+---
+
 ## 🎯 Назначение
 
 Обеспечивает мгновенное создание снимков (snapshots) in-memory базы данных, резервное копирование на уровне страниц, и восстановление с минимальной задержкой. Применяется для high-availability, аварийного восстановления, миграции, тестирования, а также клонирования для аналитики без воздействия на OLTP-нагрузку.
