--- a/Documentation/8x05.md
+++ b/Documentation/8x05.md
@@ -5,14 +5,14 @@
 * Пакет 8 — Производительность
 * Блок 8.5 — Рерантайм-оптимизация и обратная связь
 
-# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+# 🧱 Блок 8.5 — Рерантайм-оптимизация и обратная связь (Runtime Re-optimization & Feedback Loop)
 
 ---
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 8 — Производительность
-* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+* **Блок:** 8.5 — Рерантайм-оптимизация и обратная связь (Runtime Re-optimization & Feedback Loop)
 
 ---
 
