--- a/Documentation/8x06.md
+++ b/Documentation/8x06.md
@@ -1,18 +1,11 @@
-# 8.6 — Кэширование планов и обратная связь по избирательности (Plan Caching & Selectivity Feedback)
-
-## 🏢 Идентификатор блока
-
-* Пакет 8 — Производительность
-* Блок 8.6 — Кэширование планов и обратная связь по избирательности
-
-# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+# 🧱 Блок 8.6 — Кэширование планов и обратная связь по избирательности (Plan Caching & Selectivity Feedback)
 
 ---
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 8 — Производительность
-* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+* **Блок:** 8.6 — Кэширование планов и обратная связь по избирательности (Plan Caching & Selectivity Feedback)
 
 ---
 
