--- a/Documentation/8x07.md
+++ b/Documentation/8x07.md
@@ -1,18 +1,11 @@
-# 8.7 — Форматы хранения PAX / Apache Arrow (PAX / Arrow Layouts)
-
-## 🏢 Идентификатор блока
-
-* Пакет 8 — Производительность
-* Блок 8.7 — Форматы хранения PAX / Apache Arrow (PAX / Arrow Layouts)
-
-# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+# 🧱 Блок 8.7 — Форматы хранения PAX / Apache Arrow (PAX / Arrow Layouts)
 
 ---
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 8 — Производительность
-* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+* **Блок:** 8.7 — Форматы хранения PAX / Apache Arrow (PAX / Arrow Layouts)
 
 ---
 
