--- a/Documentation/8x08.md
+++ b/Documentation/8x08.md
@@ -1,18 +1,11 @@
-# 8.8 — Снимки, клонирование и резервное копирование (Copy-on-write Snapshots, Backup & Restore)
-
-## 🏢 Идентификатор блока
-
-* Пакет 8 — Производительность
-* Блок 8.8 — Снимки и восстановление
-
-# 🧱 Блок 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+# 🧱 Блок 8.8 — Снимки, клонирование и резервное копирование (Copy-on-write Snapshots, Backup & Restore)
 
 ---
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 8 — Производительность
-* **Блок:** 8.4 — Адаптивные соединения (Adaptive Joins: Hash, Merge, Nested Loop)
+* **Блок:** 8.8 — Снимки, клонирование и резервное копирование (Copy-on-write Snapshots, Backup & Restore)
 
 ---
 
